History of this buildout
========================

6.0.25 (unreleased)
-------------------

- Nothing changed yet.


6.0.24 (2016-08-30)
-------------------

- Products.PloneHotfix20160830 1.0.  [maurits]


6.0.23 (2016-07-15)
-------------------

- MINA-155 Add button styling for tinymce with upgrade step.  [lhuiskes]


6.0.22 (2016-06-13)
-------------------

- Only load Google Analytics on www.minaraad.be.  [jladage]


6.0.21 (2016-06-12)
-------------------

- Add Google Analytics code.  [jladage]


6.0.20 (2016-06-10)
-------------------

- MINA-151: Styling fixes as color to white and the correct font styling,
  Also remove the tooltip when there is a click.
  Remove login button for mobile.
  [lhuiskes]

- MINA-154: fixed error when adding a content item to a project.  This
  happened in an event handler in some project states where there was
  no committee set.  [maurits]

- MINA-153: Directly link to newsletter archive on mailchimp.com.
  Completely removed nieuwsbrieven page (mailchimp archive).  [maurits]

- MINA-151: Move inlog and logout to header underneath the search.
  and add a tooltip from jquery ui with timeout and custom styling.
  [lhuiskes]


6.0.19 (2016-06-02)
-------------------

- MINA-153: Fixed news letters page.  Fixed typo.  Used ``//`` instead
  of ``http://`` to avoid mixed content.  Removed styling on this
  page: it was commented out, and enabling it showed no difference.
  [maurits]


6.0.18 (2016-05-27)
-------------------

- MINA-150: check View permission when listing related items on theme.
  Check this in all other locations too, like homepage, Events, Studies.
  [maurits]


6.0.17 (2016-05-26)
-------------------

- Increase width of footer image to 2000.  [jladage]


6.0.16 (2016-05-24)
-------------------

- Increase width of footer image in theme model.  [jladage]

- Update phone number in header.  [jladage]


6.0.15 (2016-05-20)
-------------------
